--- a/index.html
+++ b/index.html
@@ -271,6 +271,114 @@
     function economicsTick() {
       // Weekly tick -> derive## Perfect—let’s deploy the first playable prototype to GitHub Pages
 
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="utf-8" /> <title>Trace Of Money — Prototype</title> <meta name="viewport" content="width=device-width, initial-scale=1" /> <style> :root { --bg: #0e1116; --panel: #151a22; --accent: #5ee6a8; --text: #e6eef7; --muted: #96a2b4; --warn: #ffcc66; --bad: #ff6b6b; --good: #7bd88f; } html, body { margin:0; padding:0; background:var(--bg); color:var(--text); font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Arial, sans-serif; } header { padding:12px 16px; background:#0b0f14; border-bottom:1px solid #1e2632; display:flex; align-items:center; justify-content:space-between; } header h1 { margin:0; font-size:18px; letter-spacing:0.5px; } header .sub { color:var(--muted); font-size:12px; } .wrap { display:grid; grid-template-columns: 320px 1fr 340px; gap:12px; padding:12px; } .panel { background:var(--panel); border:1px solid #232b39; border-radius:8px; padding:12px; } .panel h2 { margin:0 0 8px 0; font-size:14px; color:#cfe5ff; letter-spacing:0.3px; } .row { display:flex; align-items:center; justify-content:space-between; margin:6px 0; } .row label { color:var(--muted); font-size:12px; } .val { font-weight:600; } .grid2 { display:grid; grid-template-columns:1fr 1fr; gap:8px; } button, input, select { background:#0f141b; color:var(--text); border:1px solid #2a3342; border-radius:6px; padding:8px 10px; font-size:14px; } button { cursor:pointer; } button.primary { background:linear-gradient(180deg, #15222a, #122028, #0f1b22); border-color:#284351; } button:disabled { opacity:0.6; cursor:not-allowed; } .events { height:220px; overflow:auto; background:#0d1218; border:1px dashed #253040; border-radius:6px; padding:8px; font-size:12px; } .event { margin:4px 0; color:#d9e6f2; } .event.bad { color:var(--bad); } .event.good { color:var(--good); } .kpi { display:grid; grid-template-columns: repeat(3, 1fr); gap:8px; margin-top:8px; } .kpi .card { background:#0d1218; border:1px solid #202a38; border-radius:8px; padding:8px; } .card .label { color:var(--muted); font-size:11px; } .card .num { font-size:18px; font-weight:700; } .pill { display:inline-block; padding:2px 6px; border-radius:999px; font-size:11px; margin-left:6px; } .pill.free { background:#08351f; color:#a5ffd8; border:1px solid #1b5f3e; } .pill.ctrl { background:#352908; color:#ffe7a5; border:1px solid #5f4b1b; } .footer { color:var(--muted); font-size:12px; padding:8px 12px 16px; } .hint { color:var(--muted); font-size:12px; margin-top:6px; } .warn { color:var(--warn); } .slider-row { display:flex; gap:8px; align-items:center; } .slider-row input[type="range"] { width:100%; } .sep { height:1px; background:#1e2633; margin:8px 0; } @media (max-width: 1024px) { .wrap { grid-template-columns: 1fr; } } </style> </head> <body> <header> <div> <h1>Trace Of Money — Dam Colony</h1> <div class="sub">Post‑apocalyptic town of 10,000 survivors near a hydro dam — balance money, services, and safety.</div> </div> <div> <button id="saveBtn" class="primary">Save</button> <button id="loadBtn">Load</button> <button id="resetBtn">Reset</button> </div> </header> <div class="wrap"> <!-- Left: Setup & Policies --> <section class="panel"> <h2>Founding & Policy</h2> <div class="row"> <label>Currency name</label> <input id="currencyName" placeholder="e.g., Damscrip" /> </div> <div class="row"> <label>Initial money supply</label> <input id="initialMoney" type="number" min="10000" step="10000" value="1000000" /> </div> <div class="row"> <label>Market model</label> <select id="marketModel"> <option value="free">Free Market</option> <option value="controlled">Controlled Market</option> </select> </div> <div class="hint">Money supply determines price level; printing later raises inflation.</div> <div class="sep"></div> <div class="row"> <button id="startBtn" class="primary">Start Simulation</button> </div>
+
+  <h2 style="margin-top:14px;">Economic Levers</h2>
+  <div class="row">
+    <label>Tax rate</label>
+    <div class="slider-row"><input id="taxRate" type="range" min="0" max="60" value="10"><span id="taxRateVal" class="val">10%</span></div>
+  </div>
+  <div class="row">
+    <label>Mint new money</label>
+    <div class="grid2">
+      <input id="mintAmount" type="number" min="0" step="10000" value="0" />
+      <button id="mintBtn">Print</button>
+    </div>
+  </div>
+  <div class="row">
+    <label>Education budget</label>
+    <div class="slider-row"><input id="eduBud" type="range" min="0" max="100" value="15"><span class="val" id="eduBudVal">15%</span></div>
+  </div>
+  <div class="row">
+    <label>Defense budget</label>
+    <div class="slider-row"><input id="defBud" type="range" min="0" max="100" value="20"><span class="val" id="defBudVal">20%</span></div>
+  </div>
+  <div class="row">
+    <label>Welfare budget</label>
+    <div class="slider-row"><input id="welBud" type="range" min="0" max="100" value="10"><span class="val" id="welBudVal">10%</span></div>
+  </div>
+  <div class="hint">Budgets split tax revenue; higher defense reduces zombie risk; education builds future skills but cuts current labor.</div>
+</section>
+
+<!-- Middle: Dashboard -->
+<section class="panel">
+  <h2>Town Dashboard <span id="modelPill" class="pill free">Free Market</span></h2>
+
+  <div class="kpi">
+    <div class="card">
+      <div class="label">Population</div>
+      <div class="num" id="pop">10,000</div>
+    </div>
+    <div class="card">
+      <div class="label">Money supply</div>
+      <div class="num" id="money">0</div>
+    </div>
+    <div class="card">
+      <div class="label">Treasury</div>
+      <div class="num" id="treasury">0</div>
+    </div>
+    <div class="card">
+      <div class="label">Inflation (annualized)</div>
+      <div class="num" id="inflation">0%</div>
+    </div>
+    <div class="card">
+      <div class="label">Price level</div>
+      <div class="num" id="price">1.00</div>
+    </div>
+    <div class="card">
+      <div class="label">Happiness</div>
+      <div class="num" id="happiness">70</div>
+    </div>
+  </div>
+
+  <div style="margin-top:10px;" class="grid2">
+    <div>
+      <div class="row"><label>Skilled engineers</label><span class="val" id="eng">120</span></div>
+      <div class="row"><label>Builders</label><span class="val" id="bld">400</span></div>
+      <div class="row"><label>Teachers</label><span class="val" id="tch">40</span></div>
+      <div class="row"><label>Patrols</label><span class="val" id="patrols">150</span></div>
+    </div>
+    <div>
+      <div class="row"><label>Refugee intake/mo</label><span class="val" id="refugees">60</span></div>
+      <div class="row"><label>Jobs filled</label><span class="val" id="jobs">86%</span></div>
+      <div class="row"><label>Unrest</label><span class="val" id="unrest">12%</span></div>
+      <div class="row"><label>Zombie risk</label><span class="val" id="risk">Low</span></div>
+    </div>
+  </div>
+
+  <div class="sep"></div>
+  <div class="grid2">
+    <button id="buildSchool">Build School (requires engineer+builders)</button>
+    <button id="buildSewage">Build Sewage Plant</button>
+    <button id="recruitPatrols">Recruit Patrols</button>
+    <button id="openRefuge">Open Refuge Program</button>
+  </div>
+
+  <div class="hint">Time advances weekly; economy annualizes inflation from money/price changes; events log outcomes.</div>
+
+  <div style="margin-top:10px;">
+    <div class="events" id="log"></div>
+  </div>
+</section>
+
+<!-- Right: Actions & Status -->
+<section class="panel">
+  <h2>Turn Control</h2>
+  <div class="grid2">
+    <button id="tickBtn" class="primary">Advance 1 Week</button>
+    <button id="runBtn">Auto‑Run</button>
+  </div>
+  <div class="row"><label>Week</label><span class="val" id="week">0</span></div>
+  <div class="row"><label>Year</label><span class="val" id="year">2025</span></div>
+  <div class="hint">Start date: Fri, 4 Jul 2025 — canon timeline.</div>
+
+  <h2 style="margin-top:14px;">Prices & Markets</h2>
+  <div class="row"><label>Goods demand</label><span class="val" id="demand">1.00</span></div>
+  <div class="row"><label>Supply capacity</label><span class="val" id="supply">1.00</span></div>
+  <div class="row"><label>Black market</label><span class="val" id="black">Low</span></div>
+  <div class="hint">Controlled markets dampen prices but raise black‑market pressure; free markets increase efficiency but can widen inequality/unrest.</div>
+</section>
+
 Below is a ready-to-ship plan with a single-file game prototype and the exact deployment steps on GitHub Pages.
 
 ### What happens now
@@ -289,3 +397,5 @@ Notes:
 - The site becomes publicly accessible after Pages is enabled, even if the repo is private in some plans; avoid committing secrets[13][14][3].
 
 ---
+
+</div> <div class="footer">Prototype 0.1 — Save/Load via localStorage — Balancing placeholders for rapid iteration.</div> <script> const el = id => document.getElementById(id); const fmt = n => (typeof n === 'number' ? n.toLocaleString() : n); const state = { started: false, week: 0, year: 2025, pop: 10000, money: 0, treasury: 0, price: 1.0, inflationAnn: 0, happiness: 70, market: 'free', // 'free' | 'controlled' skills: { eng:120, bld:400, tch:40, patrols:150 }, rates: { tax:0.10, edu:0.15, def:0.20, wel:0.10 }, refugeesPerMonth: 60, unrest: 0.12, jobsFilled: 0.86, demand: 1.00, supply: 1.00, black: 0.10, auto: null, currency: 'Damscrip', lastPrice: 1.0 }; function log(msg, cls='') { const line = document.createElement('div'); line.className = 'event ' + cls; line.textContent = msg; el('log').prepend(line); } function refresh() { el('modelPill').textContent = state.market === 'free' ? 'Free Market' : 'Controlled'; el('modelPill').className = 'pill ' + (state.market==='free'?'free':'ctrl'); el('pop').textContent = fmt(state.pop); el('money').textContent = fmt(Math.round(state.money)); el('treasury').textContent = fmt(Math.round(state.treasury)); el('inflation').textContent = (state.inflationAnn*100).toFixed(1) + '%'; el('price').textContent = state.price.toFixed(2); el('happiness').textContent = Math.round(state.happiness); el('eng').textContent = state.skills.eng; el('bld').textContent = state.skills.bld; el('tch').textContent = state.skills.tch; el('patrols').textContent = state.skills.patrols; el('refugees').textContent = Math.round(state.refugeesPerMonth); el('jobs').textContent = Math.round(state.jobsFilled*100) + '%'; el('unrest').textContent = Math.round(state.unrest*100) + '%'; el('risk').textContent = state.skills.patrols >= 160 ? 'Low' : state.skills.patrols >= 120 ? 'Moderate' : 'High'; el('demand').textContent = state.demand.toFixed(2); el('supply').textContent = state.supply.toFixed(2); el('black').textContent = state.black < 0.15 ? 'Low' : state.black < 0.35 ? 'Rising' : 'High'; el('week').textContent = state.week; el('year').textContent = state.year; } function startSim() { if (state.started) return; state.started = true; state.currency = el('currencyName').value.trim() || 'Damscrip'; const initial = Math.max(10000, Number(el('initialMoney').value || 1000000)); state.money = initial; state.market = el('marketModel').value; state.lastPrice = state.price; log(`Founded new currency "${state.currency}" with ${fmt(initial)} units.`, 'good'); log(`Market model set to ${state.market}.`, ''); refresh(); } function econTick() { // Weekly tick, derive simple macro // Output: taxes, budgets, inflation proxy, price adjust, population/refugees, skills pipeline, risk/unrest const weeksPerYear = 52; // Taxes on nominal GDP proxy: base economic activity ~ pop * jobsFilled * (market efficiency) const marketEff = state.market === 'free' ? 1.05 : 0.92; const activity = state.pop * state.jobsFilled * marketEff; const price = state.price; const nominal = activity * price; const taxes = nominal * state.rates.tax / weeksPerYear; state.treasury += taxes; // Budgets split tax revenue const eduSpend = taxes * state.rates.edu; const defSpend = taxes * state.rates.def; const welSpend = taxes * state.rates.wel; // Money growth via seigniorage raises inflation const moneyGrowth = (state.money - (state.prevMoney ?? state.money)) / (state.prevMoney || state.money || 1); // Price dynamics: price responds to money growth, demand-supply gap, and market controls const gap = (state.demand - state.supply); const controlDamp = state.market === 'controlled' ? 0.6 : 1.0; const dP = (0.25*moneyGrowth + 0.15*gap) * controlDamp; // per week price change fraction (toy) state.lastPrice = state.price; state.price = Math.max(0.3, state.price * (1 + dP)); // Annualized inflation from weekly price change const weeklyInfl = (state.price / state.lastPrice) - 1; state.inflationAnn = Math.max(-0.5, Math.min(1.5, Math.pow(1 + weeklyInfl, weeksPerYear) - 1)); // Demand/Supply respond to happiness, budgets, and black market const defRiskCut = defSpend > (state.pop*0.01/weeksPerYear) ? 0.01 : 0.0; const blackAdj = state.market === 'controlled' ? 0.01 : -0.005; state.black = Math.max(0, Math.min(0.9, state.black + blackAdj + (gap > 0.1 ? 0.01 : 0))); state.demand = Math.max(0.6, Math.min(1.6, state.demand * (1 + (state.happiness-60)/10000 - weeklyInfl*0.2))); state.supply = Math.max(0.6, Math.min(1.6, state.supply * (1 + (state.jobsFilled-0.8)/20 - state.black*0.01))); // Refugees monthly -> weekly slice const weeklyRef = state.refugeesPerMonth / 4.345; state.pop += Math.round(weeklyRef); // Random skill mix for refugees (toy) if (Math.random() < 0.4) state.skills.bld += 1; if (Math.random() < 0.2) state.skills.eng += 1; if (Math.random() < 0.1) state.skills.tch += 1; // Education pipeline: teachers create future skills but pull from current labor const teacherEffect = Math.min(state.skills.tch, 200) * (eduSpend > 0 ? 0.002 : 0); if (Math.random() < teacherEffect) { // graduate one skilled worker const r = Math.random(); if (r < 0.5) state.skills.bld += 1; else if (r < 0.85) state.skills.eng += 1; else state.skills.tch += 1; log('Education: New skilled worker graduated.', 'good'); } // Teachers reduce current jobsFilled slightly state.jobsFilled = Math.max(0.7, Math.min(0.98, 0.86 - state.skills.tch/10000)); // Risk & unrest const patrolNeed = Math.max(100, Math.floor(state.pop/80)); const risk = Math.max(0, (patrolNeed - state.skills.patrols)/patrolNeed); state.unrest = Math.max(0, Math.min(1, state.unrest + (state.inflationAnn > 0.2 ? 0.01 : -0.002) + (state.market==='free' ? 0.002 : -0.001))); state.happiness = Math.max(10, Math.min(95, state.happiness - (state.inflationAnn>0.2?1.0:0.2) - risk*0.7 + (welSpend>0?0.3:0))); // Zombie incidents if risk high if (Math.random() < risk*0.05) { const loss = Math.floor(5 + Math.random()*20); state.pop = Math.max(0, state.pop - loss); log(`Zombie incident at the perimeter: ${loss} casualties. Increase defense!`, 'bad'); } // Store for next tick state.prevMoney = state.money; state.week += 1; if (state.week % 52 === 0) state.year += 1; refresh(); } function printMoney() { const amt = Number(el('mintAmount').value || 0); if (amt > 0) { state.money += amt; log(`Minted ${fmt(amt)} ${state.currency}.`, 'warn'); refresh(); } } // Actions function buildSchool() { if (state.skills.eng < 1 || state.skills.bld < 3) { log('Construction failed: need 1 engineer and 3 builders.', 'bad'); return; } state.skills.eng -= 1; state.skills.bld -= 3; state.skills.tch += 3; state.treasury = Math.max(0, state.treasury - 2500); log('Built a School: +3 teachers; long‑term skills improved.', 'good'); refresh(); } function buildSewage() { if (state.skills.eng < 2 || state.skills.bld < 5) { log('Construction failed: need 2 engineers and 5 builders.', 'bad'); return; } state.skills.eng -= 2; state.skills.bld -= 5; state.happiness = Math.min(95, state.happiness + 3); state.treasury = Math.max(0, state.treasury - 5000); log('Built Sewage Plant: sanitation improved; +3 happiness.', 'good'); refresh(); } function recruitPatrols() { const hire = 10; state.skills.patrols += hire; state.treasury = Math.max(0, state.treasury - 1000); log(`Recruited ${hire} patrols. Perimeter safety improved.`, 'good'); refresh(); } function openRefuge() { state.refugeesPerMonth = Math.min(300, state.refugeesPerMonth + 40); state.treasury = Math.max(0, state.treasury - 800); log('Refuge program expanded: +40/mo intake. Skills may improve; services load increases.', ''); refresh(); } // Wire UI el('startBtn').onclick = startSim; el('tickBtn').onclick = () => { if (state.started) econTick(); }; el('runBtn').onclick = () => { if (!state.started) return; if (state.auto) { clearInterval(state.auto); state.auto = null; el('runBtn').textContent = 'Auto‑Run'; } else { state.auto = setInterval(econTick, 600); el('runBtn').textContent = 'Pause'; } }; el('mintBtn').onclick = printMoney; el('taxRate').oninput = e => { const v = Number(e.target.value); state.rates.tax = v/100; el('taxRateVal').textContent = `${v}%`; }; el('eduBud').oninput = e => { el('eduBudVal').textContent = `${e.target.value}%`; state.rates.edu = Number(e.target.value)/100; }; el('defBud').oninput = e => { el('defBudVal').textContent = `${e.target.value}%`; state.rates.def = Number(e.target.value)/100; }; el('welBud').oninput = e => { el('welBudVal').textContent = `${e.target.value}%`; state.rates.wel = Number(e.target.value)/100; }; el('buildSchool').onclick = buildSchool; el('buildSewage').onclick = buildSewage; el('recruitPatrols').onclick = recruitPatrols; el('openRefuge').onclick = openRefuge; el('currencyName').value = state.currency; el('marketModel').onchange = e => { state.market = e.target.value; refresh(); }; // Save/Load el('saveBtn').onclick = () => { localStorage.setItem('trace_money_state', JSON.stringify(state)); log('Game saved locally.', 'good'); }; el('loadBtn').onclick = () => { const raw = localStorage.getItem('trace_money_state'); if (!raw) return log('No save found.', 'bad'); const s = JSON.parse(raw); // Preserve functions and defaults Object.assign(state, s); refresh(); log('Save loaded.', 'good'); }; el('resetBtn').onclick = () => { localStorage.removeItem('trace_money_state'); location.reload(); }; // Initial paint refresh(); </script> </body> </html> ```
